<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txt_login"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:hint="@string/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="24sp"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/txt_password"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textAlignment="center"
            android:textSize="24sp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:layout_gravity="center"
            android:id="@+id/btn_enter"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="48dp"
            android:text="@string/btn_enter"
            android:background="@android:color/holo_green_dark"
            />

    </LinearLayout>
</RelativeLayout>